--- a/src/index.scss
+++ b/src/index.scss
@@ -28,7 +28,6 @@ body{
 
 
 #fridge {
-    // border-style: solid;
     height: 857px;
     width: 100%;
     margin-right: 5px;
@@ -36,7 +35,6 @@ body{
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: 89%;
-    // transform: scaleX(-1);
     z-index: 1;
 }
 
@@ -453,8 +451,8 @@ body{
     z-index: 2;
     width: 150px;
     height: 100px;
-    margin-left: 528px;
-    margin-top: 405px;
+    margin-left: 30%;
+    margin-top: 23.5%;
 }
 
 #microwave{
@@ -479,8 +477,8 @@ body{
     z-index: 2;
     width: 150px;
     height: 100px;
-    margin-right: 100px;
-    margin-top: 420px;
+    margin-left: 80%;
+    margin-top: 24%;
 }
 
 #sink-top{
@@ -494,7 +492,7 @@ body{
     z-index: 2;
     // border-style: solid;
     height: 150px;
-    width: 315px;
+    width: 350px;
 
 }
 #git-container{
@@ -505,7 +503,7 @@ body{
     z-index: 2;
     width: 150px;
     height: 100px;
-    margin-left:4%;
+    margin-left:89%;
     margin-top: 40%; 
     // border: solid black;
 }
@@ -532,7 +530,7 @@ body{
     z-index: 2;
     width: 150px;
     height: 100px;
-    margin-right:15%;
+    margin-left: 71.5%;
     margin-top: 40.1%;
 }
 
@@ -559,8 +557,8 @@ body{
     z-index: 2;
     width: 150px;
     height: 100px;
-    margin-right: 1720px;
-    margin-top: 400px;
+    margin-right: 14.5%;
+    margin-top: 23.5%;
 }
 
 #pot{
@@ -585,8 +583,8 @@ body{
     z-index: 2;
     width: 350px;
     height: 100px;
-    margin-right: 750px;
-    margin-top: 400px;
+    margin-right: 33%;
+    margin-top: 23.5%;
 }
 
 #mug{
@@ -601,6 +599,7 @@ body{
     // border-style: solid;
     height: 150px;
     width: 400px;
+    
 
 }
 
